Fix alignment. I can't figure out why milligram extended .row elements beyond the edges of their parent and the git history for milligram offers no clues. I'm removing it for now until a clear need appears.

--- a/sscaffold.css
+++ b/sscaffold.css
@@ -395,6 +395,7 @@ main section {
 	display: flex;
 	flex-direction: column;
 	padding: 0;
+	margin: 0;
 	width: 100%;
 }
 
@@ -584,8 +585,6 @@ main section {
 @media (min-width: 40rem) {
 	.row {
 		flex-direction: row;
-		margin-left: -1.0rem;
-		width: calc(100% + 2.0rem);
 	}
 	.row .column {
 		margin-bottom: inherit;
